[tool.poetry]
name = "job-manager"
version = "0.1.0"
description = ""
authors = ["wooruang <wooruang@gmail.com>"]
readme = "README.md"
packages = [{include = "job_manager"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
